tests/compile_errors/nonexhaustive_match.rk
// SPDX-License-Identifier: (MIT OR Apache-2.0)
// ERROR: non-exhaustive match — missing Green and Blue
// Expected: typecheck error for incomplete pattern coverage
// BUG: currently passes type check — exhaustiveness not enforced

enum Color { Red, Green, Blue }

func describe(c: Color) -> string {
    match c {
        Red => return "red"
    }
}

func main() {}
